# autoclasstoc

./: .bumpversion.cfg  .gitignore  .gitlint  .pre-commit-config.yaml  .pypirc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/: .git-commit-template.txt  release-drafter.yaml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  chore.md
.github/workflows/: my_CD_pipe.yaml  release.yml  test-release-semantic.yaml  test.yml  test_and_release.yaml  test_and_release.yml  test_release_pypi_test.yaml  update-changelog-DOCS.yaml  update-changelog-WIP.yaml
autoclasstoc/: __init__.py  errors.py  nodes.py  plugin.py  sections.py  utils.py
autoclasstoc/_static/: autoclasstoc.css
docs/: .gitignore  CHANGELOG.md  Makefile  advanced_usage.rst  basic_example.py  basic_usage.rst  conf.py  getting_help.rst  index.rst  requirements.txt
docs/_ext/: example.py  show_nodes.py
docs/_static/css/: autoclasstoc.css  sphinxclasstocr.css
docs/_templates/autosummary/: class.rst  module.rst
docs/api/: config.rst  python.rst  rst.rst
docs/api/autogen/: autoclasstoc.AutoClassToc.rst  autoclasstoc.ConfigError.rst  autoclasstoc.InnerClasses.rst  autoclasstoc.PrivateAttributes.rst  autoclasstoc.PrivateMethods.rst  autoclasstoc.PublicAttributes.rst  autoclasstoc.PublicMethods.rst  autoclasstoc.Section.rst  autoclasstoc.is_attribute.rst  autoclasstoc.is_method.rst  autoclasstoc.is_private.rst  autoclasstoc.is_public.rst  autoclasstoc.nodes.details.rst  autoclasstoc.nodes.details_summary.rst  autoclasstoc.nodes.rst  autoclasstoc.utils.comma_separated_list.rst  autoclasstoc.utils.filter_attrs.rst  autoclasstoc.utils.find_inherited_attrs.rst  autoclasstoc.utils.load_class.rst  autoclasstoc.utils.make_container.rst  autoclasstoc.utils.make_inherited_details.rst  autoclasstoc.utils.make_links.rst  autoclasstoc.utils.make_rubric.rst  autoclasstoc.utils.make_toc.rst  autoclasstoc.utils.nodes_from_rst.rst  autoclasstoc.utils.pick_sections.rst  autoclasstoc.utils.rst  autoclasstoc.utils.strip_p.rst
docs/examples/: collections.rst  other_projects.rst  pathlib.rst
docs/syntax/: python.rst  rst.rst  sphinx.rst
docs/syntax/api/: sphinxclasstocr.utils.comma_separated_list.rst  sphinxclasstocr.utils.filter_attrs.rst  sphinxclasstocr.utils.find_inherited_attrs.rst  sphinxclasstocr.utils.load_class.rst  sphinxclasstocr.utils.make_container.rst  sphinxclasstocr.utils.make_inherited_details.rst  sphinxclasstocr.utils.make_links.rst  sphinxclasstocr.utils.make_rubric.rst  sphinxclasstocr.utils.make_toc.rst  sphinxclasstocr.utils.nodes_from_rst.rst  sphinxclasstocr.utils.pick_class.rst  sphinxclasstocr.utils.pick_sections.rst  sphinxclasstocr.utils.rst  sphinxclasstocr.utils.strip_p.rst
sphinxclasstocr/: __init__.py  errors.py  nodes.py  plugin.py  sections.py  utils.py
sphinxclasstocr/_static/: sphinxclasstocr.css
tests/: pytest.ini  test_autoclasstoc.nt  test_autoclasstoc.py  test_section.nt  test_section.py  test_utils.py
