[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "autoclasstoc"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = "README.rst"
dynamic = ["version", "description"]
requires-python = ">=3.6,<3.11"
dependencies = [
  'sphinx>=3.0',
  'docutils',
  'more_itertools',
]

[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-cov',
  'parametrize_from_file',
  'voluptuous',
  'coveralls',
]
docs = [
  'sphinx>=3.1',
  'sphinx_rtd_theme',
]

[project.urls]
'Documentation' = 'https://autoclasstoc.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/autoclasstoc'
'Bug Tracker' = 'https://github.com/kalekundert/autoclasstoc/issues'
'Continuous Integration' = 'https://github.com/kalekundert/autoclasstoc/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/autoclasstoc'

[tool.semantic_release]
branch = 'release'
version_variable = 'autoclasstoc/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
